<resources>
    <string name="app_name">NETmonsters</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="splashLogo">MainLogo</string>
    <string name="dashLogo">NETmonsters PDA</string>

    <!--- Capture strings -->
    <string name="latitude_label">Latitude: </string>
    <string name="longitude_label">Longitude: </string>
    <string name="distance_label">Distance to Egg: </string>

    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>

    <string name="last_update_time_label">Last location update time: </string>

    <string name="location_updated_message">Location updated</string>

    <!-- Attack button strings -->
    <string name="btnAttackOne">Attack One</string>
    <string name="btnAttackTwo">Attack Two</string>
    <string name="btnSpecialMove">Special</string>
    <string name="btnDodgeAbility">Dodge</string>
</resources>
